--- a/gra-w-zycie/style.css
+++ b/gra-w-zycie/style.css
@@ -1,11 +1,70 @@
 td{
     cursor: pointer;
     user-select: none;
-    font-size: 1.3vw; /* Dynamiczny rozmiar fontu */
+    font-size: 1vw;
+    color: #45475a;
 }
-button{
-    cursor: pointer;
+td:hover
+{
+    color: #cdd6f4;
 }
 body{
-    background-color: bisque;
+    background-color: #1e1e2e;
+    color: #cdd6f4;
+    text-align: center;
+    width: 50%;
+    margin: 0 auto;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+table{
+    width: 50%;
+    margin: 0 auto;
+    background-color: #313244;
+    border: 2px #45475a solid;
+    
+}
+
+button{
+    margin: 3px;
+    color: #cdd6f4;
+    background-color: #313244;
+    border-radius: 6%;
+    border: #45475a 1px solid;
+    cursor: pointer;
+}
+
+button:disabled
+{
+    background-color: #1e1e2e;
+    border: #313244 1px solid;
+    cursor: no-drop;
+}
+button:disabled:hover
+{
+    background-color: #1e1e2e;
+    border: #313244 1px solid;
+    cursor: no-drop;
+}
+button:hover
+{
+    background-color: #585b70;
+    border: #313244 1px solid;
+}
+#bt-clear:hover{
+    background-color: #f38ba8;
+    color: #4c4f69;
+    border: #313244 1px solid;
+}
+.running{
+    background-color: #a6e3a1;
+    color: #4c4f69;
+    border: #313244 1px solid;
+}
+.running:hover{
+    background-color: #f38ba8;
+    color: #4c4f69;
+    border: #313244 1px solid;
+}
+.life{
+    color: #89dceb;
 }
