--- a/gra-w-zycie/style.css
+++ b/gra-w-zycie/style.css
@@ -17,7 +17,7 @@ body{
     text-align: center;
     width: 50%;
     margin: 0 auto;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: sans-serif;
 }
 table{
     width: 50%;
