--- a/zaawansowane-aplikacje-internetowe/2025.10.02/book/src/index.css
+++ b/zaawansowane-aplikacje-internetowe/2025.10.02/book/src/index.css
@@ -5,9 +5,25 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  text-align: center;
+  background-color: rgb(218, 255, 255);
+  height: 100vh;
 }
 
+.App{
+    height: 100vh;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+h5{
+  position: absolute;
+  bottom: 10px;
+  left: 0; 
+  right: 0; 
+  margin-left: auto; 
+  margin-right: auto; 
+  width: 200px;
+  text-align: center;
 }
