--- a/zaawansowane-aplikacje-internetowe/2025.10.02/salon/src/components/Content/Offer/Offer.css
+++ b/zaawansowane-aplikacje-internetowe/2025.10.02/salon/src/components/Content/Offer/Offer.css
@@ -1,13 +1,25 @@
-.Offer{
+.Offer {
     border: 1px solid #00000015;
     border-radius: 15px;
     width: fit-content;
     margin: 50px;
     padding: 50px;
 }
-.Offer img{
-    width: 400px;
-}
-.Offer h3{
+
+.Offer h3 {
     margin: 0 auto 0 auto;
+}
+
+.Offer .image {
+    width: 450px;
+    height: 250px;
+    overflow: hidden;
+    display: block;
+}
+
+.Offer .image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
 }
