--- a/zaawansowane-aplikacje-internetowe/2025.10.30/shoe-shop/src/components/Main/Shoe/Shoe.css
+++ b/zaawansowane-aplikacje-internetowe/2025.10.30/shoe-shop/src/components/Main/Shoe/Shoe.css
@@ -3,16 +3,16 @@
     gap: 16px;
     align-items: flex-start;
     padding: 12px;
-    border: 1px solid #e0e0e0;
+    border: 1px solid #8087a2;
     border-radius: 6px;
     max-width: 600px;
-    background: #fff;
+    background-color: #5b6078;
 }
 
 .img {
     width: 140px;
     height: 140px;
-    background: #ddd;
+    background: #5b6078;
     border-radius: 4px;
     flex: 0 0 140px;
     background-position: center;
@@ -37,7 +37,7 @@
 
 .info p {
     margin: 0 0 12px 0;
-    color: #333;
+    color: #cad3f5;;
 }
 
 .btn {
@@ -47,14 +47,23 @@
 
 .btn button {
     padding: 8px 12px;
-    border: 1px solid #bbb;
-    background: #f7f7f7;
-    border-radius: 4px;
+    border: 1px solid #8087a2;
     cursor: pointer;
+    background-color: #5b6078;
+    padding: 14px;
+    color: white;
+    border-radius: 10px;
+    border-style: solid;
 }
 
 .btn button:hover {
-    background: #eee;
+    background-color: #8087a2;
+    border-color: #8087a2;
+    transition-duration: 500ms;
+    padding: 14px;
+    color: white;
+    border-radius: 10px;
+    border-style: solid;
 }
 
 @media (max-width: 480px) {
